# rs-wat2imports

./: Cargo.toml  README.md  example.sh  opt.sh  rs-wat2imports.wasm  wasi.sh
src/: lib.rs  main.rs
