[package]
name = "rs-wat2imports"
version = "0.1.0"
edition = "2024"

description = "Prints the import info of the wasm/wat."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-wat2imports"
homepage = "https://github.com/takanoriyanagitani/rs-wat2imports"
documentation = "https://docs.rs/rs-wat2imports/latest"
keywords = ["wasm", "wat", "import", "wasi"]

exclude = [
    "rs-wat2imports.wasm",
    "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.serde]
version = "1"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.wasmi]
version = "1"
default-features = false
features = [
	"std",
    "wat",
    "simd",
    "prefer-btree-collections",
    "extra-checks",
]
